# MacHub

./: .gitignore  README.md  index.html  package-lock.json  package.json
mac-cleaner-tauri/: package-lock.json  package.json  vite.config.ts
mac-cleaner-tauri/src/: App.css  App.tsx
mac-cleaner-tauri/src-tauri/: Cargo.toml  tauri.conf.json
mac-cleaner-tauri/src-tauri/icons/: icon.icns
mac-cleaner-tauri/src-tauri/src/: lib.rs
mac-cleaner-tauri/src/components/: BrewInstaller.tsx  DinoGame.tsx  InternetAnalyzer.tsx  SecurityScan.tsx  SnakeGame.tsx  StartupManager.tsx  TicTacToe.tsx
main/: index.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/app/arcade/: page.module.css  page.tsx
src/app/browser-data/: page.module.css  page.tsx
src/app/duplicates/: page.module.css  page.tsx
src/app/extensions/: page.module.css  page.tsx
src/app/homebrew/: page.module.css  page.tsx
src/app/junk/: page.module.css  page.tsx
src/app/large-files/: page.module.css  page.tsx
src/app/privacy/: page.module.css  page.tsx
src/app/ram/: page.module.css  page.tsx
src/app/startup/: page.module.css  page.tsx
src/app/trash/: page.module.css  (+1 more)
src/components/: ActivityLog.tsx  BrewInstaller.tsx  FileConverter.tsx  GamesHub.tsx  InternetAnalyzer.tsx  LargeFileFinder.tsx  PasswordGenerator.tsx  SecureVault.tsx  SecurityScan.tsx
src/contexts/: LogContext.tsx
src/lib/: adware_signatures.ts  scanner.ts  shell.ts
(+26 files in other folders)
