[package]
name = "mac-cleaner-tauri"
version = "0.1.0"
description = "A modern, professional macOS cleaning utility."
authors = ["Antigravity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mac_cleaner_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
trash = "3.3"
walkdir = "2"
chrono = "0.4"
tauri-plugin-shell = "2"
image = "0.24"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"



[dev-dependencies]
tempfile = "3"
